--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 main: smp.picnic.spigotplugintemplate.SpigotPlugin
-name: HalloweenPicnic
+name: SpigotPlugin
 version: 1.0.0.290920
 author: David
 api-version: 1.16
